--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "host-csrf": "^1.0.1",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.0.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
